# Choice-assay

./: .gitignore  0_Data_check.ipynb  1_DLC_data_extraction.ipynb  2_Extraction_of_data_from_csvs.ipynb  4_Train_YOLO_Pose.ipynb  Beecam_script_07-06.py  DLC_to_YOLO_conversion.ipynb  README.md  check.cmd  pyproject.toml  pytest.ini
anna_archive/: 0_Data_check.ipynb  2_Extraction_of_data_from_csvs.ipynb  3_Data_visualisation.ipynb  Beecam_script_07-06.py
labeled-data/: DLC_to_YOLO_conversion.ipynb  autosplit_test.txt  autosplit_train.txt  autosplit_val.txt  data.yaml  labels.cache
labeled-data/labels/: left_10-06-2024_16-40-41_img30.txt  left_10-06-2024_16-55-06_img085.txt  left_10-06-2024_17-01-03_img121.txt  left_10-06-2024_17-01-17_img043.txt  left_10-06-2024_17-01-17_img046.txt  left_10-06-2024_19-06-19_img054.txt  left_10-06-2024_19-06-19_img134.txt  left_10-06-2024_19-14-45_img43.txt  left_10-06-2024_19-32-14_img40.txt  left_10-06-2024_19-32-14_img49.txt  left_10-06-2024_19-32-27_img37.txt  left_10-06-2024_19-32-27_img40.txt  left_10-06-2024_20-49-02_img36.txt  left_10-06-2024_20-49-02_img40.txt  left_10-06-2024_20-49-43_img148.txt  left_10-06-2024_20-49-43_img220.txt  left_10-06-2024_20-50-26_img169.txt  left_10-06-2024_22-00-56_img23.txt  left_10-06-2024_22-00-56_img68.txt  left_12-06-2024_12-52-30_img058.txt  left_12-06-2024_12-52-30_img076.txt  left_12-06-2024_12-52-39_img376.txt  left_12-06-2024_12-52-39_img391.txt  left_12-06-2024_12-53-22_img26.txt  left_12-06-2024_13-01-41_img108.txt  left_12-06-2024_13-01-41_img156.txt  left_12-06-2024_13-13-32_img70.txt  left_12-06-2024_13-16-20_img064.txt  left_12-06-2024_14-19-30_img175.txt  left_12-06-2024_14-32-09_img036.txt  left_12-06-2024_14-32-09_img039.txt  left_12-06-2024_15-13-51_img126.txt  left_12-06-2024_15-13-51_img184.txt  left_12-06-2024_15-14-23_img41.txt  left_12-06-2024_15-50-35_img94.txt  left_12-06-2024_15-50-58_img20.txt  left_12-06-2024_15-50-58_img23.txt  left_12-06-2024_15-58-20_img081.txt  left_12-06-2024_15-58-20_img101.txt  left_12-06-2024_15-58-31_img291.txt  (+346 more)
readme/: Beecam_script_logic_summary.md  Jupyter_notebooks_logic_summary.md
src/choice_assay/: choice_assay_pose_processor.py  choice_assay_trapcam.py  my_choice_assay_sensor.py  my_choice_assay_sensor_with_leds.py  my_fleet_config.py  my_processor_example.py  run_my_sensor.py  run_sensor_core.ipynb  system.cfg
src/choice_assay.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/choice_assay/etl/: download_and_enrich.ipynb
src/choice_assay/resources/beecam_ncnn_model/: metadata.yaml  model.ncnn.param
src/choice_assay/rpi/: choice_assay_pose_processor.py  choice_assay_trapcam.py  my_choice_assay_sensor.py  system.cfg
src/example/: keys.env  my_fleet_config.py  my_processor_example.py  my_sensor_example.py  run_my_sensor.py  run_system_test.py  system.cfg
test/: choice_assay_test.py  conftest.py  test_choice_assay_sensor_video_recording.py  test_choice_assay_sensor_with_leds.py  test_fleet_config.py  test_my_video_sensor.py
